package behavioral.state.ATM;

public interface ATM_State {
    void xuLyNapTien(int soTien, ATM context);
    void xuLyRutTien(ATM context);
}
